<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AppPortfolio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
		style="@style/Button"
        android:text="@string/spotify"
        android:id="@+id/spotifyStreamerButton"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title"
        android:onClick="spotifyButton" />

    <Button
		style="@style/Button"
        android:text="@string/scores"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyStreamerButton"
        android:onClick="scoresButton" />

    <Button
		style="@style/Button"
        android:text="@string/library"
        android:id="@+id/libraryButton"
        android:layout_below="@+id/scoresButton"
        android:onClick="libraryButton" />

    <Button
		style="@style/Button"
        android:text="@string/builditbig"
        android:id="@+id/buildItBigButton"
        android:layout_alignStart="@+id/libraryButton"
        android:layout_below="@+id/libraryButton"
        android:onClick="bibButton" />

    <Button
		style="@style/Button"
        android:text="@string/xyz"
        android:id="@+id/xyzButton"
        android:layout_below="@+id/buildItBigButton"
        android:clickable="true"
        android:onClick="xyzButton" />

    <Button
		style="@style/Button.Emphasis"
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzButton"
        android:onClick="capstoneButton" />

</RelativeLayout>
